# QuantaEngine

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
configs/: long_lived_stars_universe.yaml  no_perturbations_universe.yaml  no_stable_atoms_universe.yaml  standard_universe.yaml  strong_alpha_universe.yaml  strong_gravity_universe.yaml  weak_gravity_universe.yaml
docs/: MVP_COMPLETION.md  api_reference.md  examples.md  physics_assumptions.md
docs/design/: ADVERSARIAL_COSMOGENESIS.md  REPO_STRUCTURE.md
docs/reviews/: 2026-06-21-codebase-assessment.md  2026-06-21b-execution-quality-audit.md  README.md  index.yaml
examples/: compare_universes.py  demo.py  run_arena.py  run_standard_universe.py  scan_alpha.py  scan_gravity.py
plans/: 2026-06-20-QuantaEngine_PROJECT_PLAN.md
plans/codebase-remediation-2026-06-21b/: EXECUTION_REPORT.md  README.md  TRACEABILITY_MATRIX.md
plans/iterations/: 2026-06-21T053152_gen2.md
reports/: scan_alpha.csv  scan_alpha.md  scan_gravity.csv  scan_gravity.md  standard.json  standard.md
reports/arena/: evolution_report.json  evolution_report.md
scripts/: parameter_scan.py  quickstart.py
src/cosmogenesis/: __init__.py  cli.py
src/quanta_engine/: __init__.py  cli.py  pipeline.py
src/quantaengine_lattice/: __init__.py  analysis.py  chaos.py  (+10 more)
tests/: test_arena.py  test_atomic.py  test_cli.py  test_complexity.py  test_config_schema.py  test_cosmology.py  test_e2e_universe.py  test_engine.py  test_laws.py  test_nuclear.py  test_params.py  test_particles.py  test_remediation_b.py  test_scan.py  test_schemes.py  test_stars.py  test_structure.py  test_units.py  test_validation.py
theories/: registry.yaml
(+75 files in other folders)
