[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanta-engine"
version = "0.2.0"
description = "A multi-scale effective-physics compiler for generating and evaluating universes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "QuantaEngine contributors" }
]
keywords = [
  "cosmology",
  "high-energy-physics",
  "quantum-fields",
  "universe-generation",
  "simulation",
  "lattice-field-theory"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.5",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "pandas>=2.0",
  "rich>=13.0",
  "typer>=0.12",
  "pytest>=7.4",
  "hypothesis>=6.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.8",
  "pytest-cov>=5.0"
]

[project.scripts]
quanta = "quanta_engine.cli:main"
quantaengine = "quantaengine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
